frontend/test/should_pass/exec_006.grg
using attrib_model_001;

rule r1 : (NINT) {
  x:NINT;
  negative { x <-- ; }
  modify{
    exec(r2);
    return (x);
  }
}

rule r2 : (Node) {
  x:Node -e:ESTRING-> y:NINT;
  modify {
    delete(x);
    return(y);
    exec((z:Node)=r1 && r2);
    exec(r2);
  }
}

rule r3(x:Node) {
  x -e:ESTRING-> y:NINT;
  modify {
    delete(x);
    exec(r3(y));
    exec((z:NINT)=r1 && r2 && r3(y));
    exec((h:Node)=r1 && r2 && r3(y));
    exec((h:Node)=r1 && r2 && r3(h));
    exec(r2);
  }
}

