frontend/test/should_fail/exectype_SetmapAdd4.grg
using exectype;

rule r
{
	modify  {
		exec(x:set<int> =set<int> && y:boolean=false && x.add(y));
	}
}